Fix tweet content hub action button spacing

--- a/src/content/css/mixins/content-structure.less
+++ b/src/content/css/mixins/content-structure.less
@@ -395,7 +395,7 @@
         }
 
         .hub-content-action {
-            margin-left: 0px;
+            margin-left: 10px;
         }
 
         .hub-content-action:first-child {
